# fastapi-microservices

./: .gitignore  readme.md
infra/: Dockerfile.base  docker-compose.yaml  makefile  nginx.conf  prometheus.yaml  promtail-config.yaml  pyproject.toml
infra/keys/: generate_keys.sh
infra/pg_cron/: Dockerfile  init-cron.sh
infra/schema_creator/: Dockerfile  create_schemas.py  schemas.env
services/resume/: Dockerfile  config.py  dependencies.py  logger.py  main.py  middleware.py  schemas.py  utils.py
services/resume/kafka_client/: consumer.py
services/resume/redis_client/: redis.py
services/resume/resume/: models.py  repository.py  router.py  service.py
services/user_auth/: Dockerfile  alembic.ini  config.py  entrypoint.sh  logger.py  main.py  middleware.py  requirements.txt
services/user_auth/alembic/: env.py
services/user_auth/alembic/versions/: 0697914db97c_add_index_for_expired_at.py  46fdd834ed2c_init.py  642672ccb376_change_refresh_token_to_refresh_jti.py  84164c6f5a95_init.py  ab813b45e8d9_initial.py  (+2 more)
services/user_auth/auth/: repository.py  router.py  schemas.py  service.py  utils.py
services/user_auth/database/: models.py  session.py
services/user_auth/dependencies/: dependencies.py
services/user_auth/kafka_client/: producer.py  schemas.py
services/user_auth/rank/: repository.py  router.py  schemas.py  service.py
services/user_auth/redis_client/: redis.py
services/user_auth/repository/: user_repo.py
services/user_auth/user/: repository.py  router.py  schemas.py  service.py
services/user_auth/utils/: create_superuser.py  utils.py
