[tool.poetry]
name = "fastapi-microservices"
package-mode = false
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "0.9.9"
fastapi = "0.115.10"
gunicorn = "23.0.0"
uvicorn = "0.34.0"
mypy = "^1.15.0"
asyncpg = "0.30.0"
python-dotenv = "1.0.1"

[tool.poetry.group.user-auth.dependencies]
bcrypt = "4.3.0"
sqlalchemy = "2.0.38"
alembic = "^1.15.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"