[tool.poetry]
name = "fastapi-microservices"
package-mode = false
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "0.9.9"
fastapi = "0.115.10"
uvicorn = "0.34.0"
mypy = "^1.15.0"
python-dotenv = "1.0.1"
pyjwt = "^2.10.1"
cryptography = "^44.0.2"
redis = "^5.2.1"
prometheus-client = "^0.21.1"

[tool.poetry.group.user-auth]
optional = true

[tool.poetry.group.user-auth.dependencies]
bcrypt = "4.3.0"
asyncpg = "0.30.0"
sqlalchemy = "2.0.38"
alembic = "^1.15.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"


[tool.poetry.group.resume]
optional = true

[tool.poetry.group.resume.dependencies]
beanie = "^1.29.0"
pydantic = {extras = ["email"], version = "^2.11.3"}

